--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~47.0.13",
     "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.1.0",
     "react-native": "0.70.8",
