--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
   },
