--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "expo": "~47.0.13",
     "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.1.0",
     "react-native": "0.70.8",
